fix(storefront): 提高弹窗遮罩 z-index 避免被 sticky 导航穿透
8 个手写内联遮罩弹窗的显示态 z-index 过低(2~99999)，低于全局
导航 .nav 的 99999999，导致导航浮在遮罩之上穿透出来。统一对齐
共享 Modal 的 9999999999，使遮罩正确盖住导航(仍低于提示弹窗)。

涉及: EditPasswordForm/NewAddressForm(account+order)/AfterSaleInfo/
ConfirmModal/FunctionTipModal/ImageModal/VideoModal

--- a/app/[locale]/order/component/NewAddressForm/index.module.scss
+++ b/app/[locale]/order/component/NewAddressForm/index.module.scss
@@ -43,7 +43,7 @@
     width: 100%;
     &.show {
       opacity: 1;
-      z-index: 999;
+      z-index: 9999999999;
     }
     .modal_content {
       position: relative;
