--- a/app/[locale]/user/account/components/AfterSaleInfo/index.module.scss
+++ b/app/[locale]/user/account/components/AfterSaleInfo/index.module.scss
@@ -98,7 +98,7 @@
   .modal {
     position: fixed;
     inset: 0;
-    z-index: 1000;
+    z-index: 9999999999;
     display: flex;
     align-items: center;
     justify-content: center;
