--- a/app/[locale]/user/account/components/EditPasswordForm/index.module.scss
+++ b/app/[locale]/user/account/components/EditPasswordForm/index.module.scss
@@ -31,7 +31,7 @@
     width: 100%;
     &.show {
       opacity: 1;
-      z-index: 2;
+      z-index: 9999999999;
     }
     .modal_content {
       position: relative;
