--- a/app/[locale]/user/account/components/NewAddressForm/index.module.scss
+++ b/app/[locale]/user/account/components/NewAddressForm/index.module.scss
@@ -44,7 +44,7 @@
     width: 100%;
     &.show {
       opacity: 1;
-      z-index: 99999;
+      z-index: 9999999999;
     }
     .modal_content {
       position: relative;
