--- a/app/components/Modal/ConfirmModal/index.module.scss
+++ b/app/components/Modal/ConfirmModal/index.module.scss
@@ -19,7 +19,7 @@
     width: 100%;
     &.show {
       opacity: 1;
-      z-index: 99;
+      z-index: 9999999999;
     }
     .modal_content {
       position: relative;
