--- a/app/components/Modal/FunctionTipModal/index.module.scss
+++ b/app/components/Modal/FunctionTipModal/index.module.scss
@@ -13,7 +13,7 @@
     width: 100%;
     &.show {
         opacity: 1;
-        z-index: 9999;
+        z-index: 9999999999;
     }
     .modal_content {
         position: relative;
