--- a/app/components/Modal/VideoModal/index.module.scss
+++ b/app/components/Modal/VideoModal/index.module.scss
@@ -43,7 +43,7 @@
     width: 100%;
     &.show {
         opacity: 1;
-        z-index: 9999999;
+        z-index: 9999999999;
     }
     .fixed_container {
         width: 100%;
